--- a/references.bib
+++ b/references.bib
@@ -44,3 +44,18 @@
 	url = {http://dx.doi.org/10.1016/S0140-6736(02)07451-2},
 	langid = {en}
 }
+
+@article{garcía2019,
+	title = {Self esteem levels vs global scores on the Rosenberg self-esteem scale},
+	author = {{García}, Jorge Acosta and y Olmos, Francisco Checa and Matheu, Manuel Lucas and {Carreño}, {Tesifón Parrón}},
+	year = {2019},
+	month = {03},
+	date = {2019-03},
+	journal = {Heliyon},
+	pages = {e01378},
+	volume = {5},
+	number = {3},
+	doi = {10.1016/j.heliyon.2019.e01378},
+	url = {http://dx.doi.org/10.1016/j.heliyon.2019.e01378},
+	langid = {en}
+}
